<resources>
    <string name="app_name">Event Scheduler</string>
    <string name="action_sign_in">Sign In</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Event Scheduler Menu</string>
    <string name="nav_header_subtitle">---</string>
    <string name="nav_header_desc">Select An Action</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_event">Events</string>
    <string name="menu_group">Groups</string>
    <string name="menu_notification">Notifications</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_register">Register</string>
    <string name="nameFormLabel">Name</string>
    <string name="firstNameHint">First</string>
    <string name="middleNameHint">Middle</string>
    <string name="lastNameHint">Last</string>
    <string name="suffixHint">e.g. Jr. or Ph.D.</string>
    <string name="titleHint">e.g. Dr., Mr., or Mrs.</string>
    <string name="nicknameHint">e.g. \'Cool Daddy\'</string>
    <string name="contactInformationFormLabel">Contact Information</string>
    <string name="phoneNumberHint">(123) 456-7890</string>
    <string name="websiteHint">www.mywebsite.org</string>
    <string name="cancelButton">Cancel</string>
    <string name="avatar_picture_content_description">Avatar Picture</string>
</resources>