<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jmlatham.eventscheduler.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_event"
        android:name="com.jmlatham.eventscheduler.ui.events.EventsFragment"
        android:label="@string/menu_event"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.jmlatham.eventscheduler.ui.notifications.NotificationsFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_group"
        android:name="com.jmlatham.eventscheduler.ui.groups.GroupsFragment"
        android:label="@string/menu_group"
        tools:layout="@layout/fragment_groups" />
</navigation>